--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "laravel-elixir-webpack-official": "^1.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^4.6.2",
     "jquery": "^3.7.1",
     "node-sass": "^4.14.1",
